2001-11-28  Hans Petter Jansson  <hpj@ximian.com>

	* filesys.pl.in (xst_filesys_mount_sync_all): Use the
	fstab entry for mount optoins, if it exists.

	* shares-conf.in (set): Mount/unmount after fstab updated.

2001-11-27  Arturo Espinosa Aldama  <arturo@ximian.com>

	* boot-grub.pl.in (xst_boot_grub_parse_cmd): use
	xst_boot_grub_search_entry.
	(xst_boot_grub_parse_root): Infer the root.

	* partition.pl.in (xst_partition_scan_info): renamed.

	* boot-grub.pl.in (xst_boot_grub_get_next_entry): Read
	until a title cmd or EOF is found.
	(xst_boot_grub_search_entry): Use get_next_entry to get
	a specified entry.
	(xst_boot_grub_get_entries): Now use get_next_entry.
	(xst_boot_grub_parse_type): Parse the type from the
	grub.conf or deduct from the partition id.

	* boot.pl.in: renamed a bunch of stuff, made the
	XstEntryType key be "type" only instead.

2001-11-27  Hans Petter Jansson  <hpj@ximian.com>

	* service.pl.in (xst_service_proc_get_owner): Implement.
	(xst_service_proc_stop): Implement.
	(xst_service_proc_start): Implement.

	* time-conf.in (time_set_local_time): Stop xscreensaver before
	setting clock, start it up again with the same owner afterwards.
	
2001-11-27  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in (xml_parse_import): Make sure NFS imports are
	soft mounted, so we don't risk hanging indefinitely. Fixes
	Ximian bug 4599.

2001-11-26  Arturo Espinosa Aldama  <arturo@ximian.com>

	* file.pl.in (xst_file_run_pipe): Use FILE_READ
	as default mode_mask.

	* Makefile.am (PERLBODY): Added partition.pl.in.

	* partition.pl.in: Stuff related to hd partitions.
	(xst_filesys_scan_types): Run sfdisk -d and give all
	available info related to partitions.

	* report.pl.in (xst_report): Added sfdisk_failed report.

	* parse.pl.in (xst_parse_trivial): avoiding $#arr notation.

2001-11-24  Tambet Ingo  <tambet@ximian.com>

	* font.pl.in: Implemented infrastructure and two modules:
	gnome-print module and XFree module.
